<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="horizontal"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/background">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_plus"
                android:drawablePadding="8dp"
                android:text="@string/button_main_1"
                android:textColor="@color/primary"
                android:onClick="abrirTelaCadastro"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/button_main_2"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                android:drawableStart="@drawable/ic_list"
                android:drawablePadding="8dp"
                android:onClick="abrirTelaListagem"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/button_main_3"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                android:drawableStart="@drawable/ic_link"
                android:drawablePadding="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/button_main_4"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                android:drawableStart="@drawable/ic_lightbulb"
                android:drawablePadding="8dp"
                android:onClick="abrirTelaAnaliseInteligente"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/button_main_5"
                android:backgroundTint="@color/white"
                android:textColor="@color/primary"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="8dp"
                android:onClick="abrirTelaSobre"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:text="@string/button_main_6"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:onClick="abrirSiteDoCurso"/>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>